// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatView should not scroll to bottom 1`] = `
<ChatView
  messages={
    Array [
      Object {
        "date": "2017-01-01T00:00:00.000Z",
        "name": "nick",
        "text": "text",
      },
    ]
  }
  selfNick="nick"
  userClicked={[Function]}
>
  <div>
    <Message
      message="text"
      sentDate={"2017-01-01T00:00:00.000Z"}
      user="nick"
      userClicked={[Function]}
      userType={2}
    >
      <div>
        <span
          style={
            Object {
              "color": "#b2b2b2",
            }
          }
        >
          [
          00
          :
          00
          ] 
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "color": "#CECECE",
              "cursor": "pointer",
              "fontWeight": 800,
            }
          }
        >
          nick
          : 
        </span>
        <span
          style={Object {}}
        >
          text
        </span>
      </div>
    </Message>
  </div>
</ChatView>
`;

exports[`ChatView should render 1`] = `
<ChatView
  messages={Array []}
  selfNick="nick"
  userClicked={[Function]}
>
  <div />
</ChatView>
`;

exports[`ChatView should render message as self 1`] = `
<ChatView
  messages={
    Array [
      Object {
        "date": "2017-01-01T00:00:00.000Z",
        "name": "nick",
        "text": "text",
      },
    ]
  }
  selfNick="nick"
  userClicked={[Function]}
>
  <div>
    <Message
      message="text"
      sentDate={"2017-01-01T00:00:00.000Z"}
      user="nick"
      userClicked={[Function]}
      userType={2}
    >
      <div>
        <span
          style={
            Object {
              "color": "#b2b2b2",
            }
          }
        >
          [
          00
          :
          00
          ] 
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "color": "#CECECE",
              "cursor": "pointer",
              "fontWeight": 800,
            }
          }
        >
          nick
          : 
        </span>
        <span
          style={Object {}}
        >
          text
        </span>
      </div>
    </Message>
  </div>
</ChatView>
`;

exports[`ChatView should render message as system 1`] = `
<ChatView
  messages={
    Array [
      Object {
        "date": "2017-01-01T00:00:00.000Z",
        "name": "System",
        "text": "text",
      },
    ]
  }
  selfNick="nick"
  userClicked={[Function]}
>
  <div>
    <Message
      message="text"
      sentDate={"2017-01-01T00:00:00.000Z"}
      user="System"
      userClicked={[Function]}
      userType={3}
    >
      <div>
        <span
          style={
            Object {
              "color": "#ADADAD",
            }
          }
        >
          text
        </span>
      </div>
    </Message>
  </div>
</ChatView>
`;

exports[`ChatView should render messages 1`] = `
<ChatView
  messages={
    Array [
      Object {
        "date": "2017-01-01T00:00:00.000Z",
        "name": "name",
        "text": "text",
      },
    ]
  }
  selfNick="nick"
  userClicked={[Function]}
>
  <div>
    <Message
      message="text"
      sentDate={"2017-01-01T00:00:00.000Z"}
      user="name"
      userClicked={[Function]}
      userType={0}
    >
      <div>
        <span
          style={
            Object {
              "color": "#b2b2b2",
            }
          }
        >
          [
          00
          :
          00
          ] 
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "color": "#ffc561",
              "cursor": "pointer",
              "fontWeight": 800,
            }
          }
        >
          name
          : 
        </span>
        <span
          style={Object {}}
        >
          text
        </span>
      </div>
    </Message>
  </div>
</ChatView>
`;
